<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:iconTint="@color/white"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/sort"
        android:icon="@drawable/ic_baseline_sort_24"
        android:iconTint="@color/white"
        android:title="@string/sort"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/sort_by_name"
                android:title="@string/by_name" />
            <item
                android:id="@+id/sort_by_date"
                android:title="@string/by_date" />
        </menu>
    </item>

    <item
        android:id="@+id/hide_completed"
        android:checkable="true"
        android:title="@string/hide_completed"
        app:showAsAction="never" />

    <item
        android:id="@+id/delete_all"
        android:title="@string/delete_all_completed"
        app:showAsAction="never" />

</menu>